zmiany w plikach o slowosieci

--- a/movies_reviews_from_filmweb.ipynb
+++ b/movies_reviews_from_filmweb.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,16 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('FilmWeb-movies_reviews-1.csv', encoding='utf-8', index=False)"
+    "df.to_csv('FilmWeb-movies_reviews.csv', encoding='utf-8', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -293,188 +293,188 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>317</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Choć Alexander Payne trzyma na półce dwa Oscar...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>318</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>7</td>\n",
-       "      <td>W \"Safari\" – jak we wszystkich innych filmach ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>319</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Dokument o pionierach kinematografii? Brzmi ja...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>323</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>6</td>\n",
-       "      <td>W trakcie mijających wakacji repertuar kin wyg...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>324</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Prawdziwy Barry Seal nie wyglądał jak Tom Crui...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>325</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Catherine Deneuve i Catherine Frot – dwie Kata...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>326</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Jak wiemy z \"Pulp Fiction\", z zegarkami, jakie...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>327</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Tęsknota za latami 80. dopadła w końcu i Dany'...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>328</th>\n",
+       "      <th>377</th>\n",
        "      <td>positive</td>\n",
        "      <td>8</td>\n",
-       "      <td>Kiedy reżyser dwóch filmów o Spider-Manie i Ka...</td>\n",
+       "      <td>\"Niemożliwe\" to tylko stan umysłu. Polska zajm...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>329</th>\n",
+       "      <th>378</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>5</td>\n",
+       "      <td>W zamyśle debiutującego Piotra Lewandowskiego ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>379</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Każda pokuta musi kiedyś się zakończyć. Za każ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Steve Gleason miał udaną karierę jako zawodnik...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Istnieją reżyserzy, którzy nawet w temacie rod...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385</th>\n",
        "      <td>positive</td>\n",
        "      <td>6</td>\n",
-       "      <td>\"Mamuśki mają wychodne\" nie jest filmem dla ka...</td>\n",
+       "      <td>Wywrotka kokainy, martwy striptizer i kac jak ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>330</th>\n",
+       "      <th>386</th>\n",
        "      <td>negative</td>\n",
        "      <td>4</td>\n",
-       "      <td>Chociaż amerykański plakat nawiązuje w \"przeza...</td>\n",
+       "      <td>W \"Zielonej szkole\" Simone van Dusseldorp łącz...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>331</th>\n",
+       "      <th>387</th>\n",
        "      <td>positive</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Tęsknicie za czasami, gdy Bruce Willis miał cz...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Popisowym daniem Guya Ritchiego zawsze były hi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>332</th>\n",
-       "      <td>negative</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Coś jest na rzeczy. Emeryci Michael Caine, Ala...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>333</th>\n",
-       "      <td>negative</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Dokument nie ma lekko w obiegu kinowym – poza ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>334</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>6</td>\n",
-       "      <td>\"Królewicz Olch\" to brat – bliźniak innego fil...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>338</th>\n",
+       "      <th>388</th>\n",
        "      <td>positive</td>\n",
        "      <td>8</td>\n",
-       "      <td>Chociaż akcja filmu rozgrywa się na bułgarskie...</td>\n",
+       "      <td>3…2…1… Start! Auta wracają na ekrany i prują b...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>339</th>\n",
+       "      <th>389</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Reżyser Stéphan Brizé nie kojarzył się jak dot...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
        "      <td>negative</td>\n",
        "      <td>3</td>\n",
-       "      <td>W cyklu \"Mroczna Wieża\" Stephen King stworzył ...</td>\n",
+       "      <td>Producenci z Universalu mocno wierzą w życie p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>340</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Miłośnicy \"Przygód Rudego\" na pewno nie raz za...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>341</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Kontemplacja niejedno ma imię. Istnieją dla pr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>342</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Z Korei Południowej do Hollywood nie jest tak ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>343</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Twórcy \"Annabelle\" bez pardonu zaprzeczyli zna...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>344</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>5</td>\n",
-       "      <td>To nie jest historia rozgrywająca się za siedm...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>345</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Czy wiecie, że tuż obok nas kryje się cały świ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>346</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>7</td>\n",
-       "      <td>\"Paryż na bosaka\" to jeden z filmów niepozwala...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>347</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Chociaż Flying Lotus nie miał jeszcze okazji p...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>348</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Niczym rozstrojony instrument w orkiestrze, Ew...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>349</th>\n",
+       "      <th>391</th>\n",
        "      <td>negative</td>\n",
        "      <td>4</td>\n",
-       "      <td>Gwiazdy przed kamerą i szalony pomysł na fabuł...</td>\n",
+       "      <td>Pamiętacie odcinek \"Przyjaciół\", w którym Chan...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>350</th>\n",
+       "      <th>392</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Hollywoodzcy twórcy rozmiłowali się ostatnio w...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>6</td>\n",
+       "      <td>W swoim najnowszym filmie reżyser \"Czasu relig...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>394</th>\n",
+       "      <td>negative</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Reżyser przysypia, komendę \"akcja!\" musi wydaw...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Na Islandii dzieciństwo i dojrzewanie zawsze w...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>7</td>\n",
+       "      <td>\"Droga do Rzymu\" trafia na polskie ekrany niem...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Nie każdy szuka w kinie eksperymentów formalny...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Eksmisja na bruk, rozpad małżeństwa, śmierć w ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>negative</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Luksusowa nadmorska posiadłość, ona i on, nuda...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>403</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Nie bez powodu Wonder Woman nazywana jest jedn...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>6</td>\n",
+       "      <td>\"Sama przeciw wszystkim\" to film oparty na spr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>405</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Przygotujcie się na ekstremalne przeżycia. \"Na...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Filmowej baśni dla dorosłych zatytułowanej \"Mó...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>407</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Powraca w nowym filmie Romana Polańskiego obra...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>408</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>5</td>\n",
+       "      <td>W historii filmowej rozrywki możemy natknąć si...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>409</th>\n",
+       "      <td>positive</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Wnętrza wytworne, ale kiczowate. Dusze piękne,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>410</th>\n",
        "      <td>positive</td>\n",
        "      <td>7</td>\n",
        "      <td>Historia w \"Twarzy\" jest luźno oparta na prawd...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>351</th>\n",
+       "      <th>411</th>\n",
        "      <td>positive</td>\n",
        "      <td>7</td>\n",
        "      <td>W 1925 roku T.S. Eliot opublikował wiersz Próż...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>352</th>\n",
+       "      <th>412</th>\n",
        "      <td>positive</td>\n",
        "      <td>6</td>\n",
        "      <td>Rok 2045 nie przedstawia się zbyt optymistyczn...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>271 rows × 3 columns</p>\n",
+       "<p>319 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -510,41 +510,41 @@
        "53   positive    5  Choć tytuł \"Nagiej Normandii\" nie pozostawia w...\n",
        "54   positive    5  Życie Maud i Adriena przez lata przypominało r...\n",
        "..        ...  ...                                                ...\n",
-       "317  positive    7  Choć Alexander Payne trzyma na półce dwa Oscar...\n",
-       "318  positive    7  W \"Safari\" – jak we wszystkich innych filmach ...\n",
-       "319  positive    7  Dokument o pionierach kinematografii? Brzmi ja...\n",
-       "323  positive    6  W trakcie mijających wakacji repertuar kin wyg...\n",
-       "324  positive    7  Prawdziwy Barry Seal nie wyglądał jak Tom Crui...\n",
-       "325  positive    5  Catherine Deneuve i Catherine Frot – dwie Kata...\n",
-       "326  positive    7  Jak wiemy z \"Pulp Fiction\", z zegarkami, jakie...\n",
-       "327  positive    5  Tęsknota za latami 80. dopadła w końcu i Dany'...\n",
-       "328  positive    8  Kiedy reżyser dwóch filmów o Spider-Manie i Ka...\n",
-       "329  positive    6  \"Mamuśki mają wychodne\" nie jest filmem dla ka...\n",
-       "330  negative    4  Chociaż amerykański plakat nawiązuje w \"przeza...\n",
-       "331  positive    6  Tęsknicie za czasami, gdy Bruce Willis miał cz...\n",
-       "332  negative    3  Coś jest na rzeczy. Emeryci Michael Caine, Ala...\n",
-       "333  negative    3  Dokument nie ma lekko w obiegu kinowym – poza ...\n",
-       "334  positive    6  \"Królewicz Olch\" to brat – bliźniak innego fil...\n",
-       "338  positive    8  Chociaż akcja filmu rozgrywa się na bułgarskie...\n",
-       "339  negative    3  W cyklu \"Mroczna Wieża\" Stephen King stworzył ...\n",
-       "340  positive    6  Miłośnicy \"Przygód Rudego\" na pewno nie raz za...\n",
-       "341  positive    8  Kontemplacja niejedno ma imię. Istnieją dla pr...\n",
-       "342  positive    7  Z Korei Południowej do Hollywood nie jest tak ...\n",
-       "343  positive    7  Twórcy \"Annabelle\" bez pardonu zaprzeczyli zna...\n",
-       "344  positive    5  To nie jest historia rozgrywająca się za siedm...\n",
-       "345  positive    6  Czy wiecie, że tuż obok nas kryje się cały świ...\n",
-       "346  positive    7  \"Paryż na bosaka\" to jeden z filmów niepozwala...\n",
-       "347  positive    8  Chociaż Flying Lotus nie miał jeszcze okazji p...\n",
-       "348  positive    7  Niczym rozstrojony instrument w orkiestrze, Ew...\n",
-       "349  negative    4  Gwiazdy przed kamerą i szalony pomysł na fabuł...\n",
-       "350  positive    7  Historia w \"Twarzy\" jest luźno oparta na prawd...\n",
-       "351  positive    7  W 1925 roku T.S. Eliot opublikował wiersz Próż...\n",
-       "352  positive    6  Rok 2045 nie przedstawia się zbyt optymistyczn...\n",
+       "377  positive    8  \"Niemożliwe\" to tylko stan umysłu. Polska zajm...\n",
+       "378  positive    5  W zamyśle debiutującego Piotra Lewandowskiego ...\n",
+       "379  positive    7  Każda pokuta musi kiedyś się zakończyć. Za każ...\n",
+       "383  positive    7  Steve Gleason miał udaną karierę jako zawodnik...\n",
+       "384  positive    5  Istnieją reżyserzy, którzy nawet w temacie rod...\n",
+       "385  positive    6  Wywrotka kokainy, martwy striptizer i kac jak ...\n",
+       "386  negative    4  W \"Zielonej szkole\" Simone van Dusseldorp łącz...\n",
+       "387  positive    7  Popisowym daniem Guya Ritchiego zawsze były hi...\n",
+       "388  positive    8  3…2…1… Start! Auta wracają na ekrany i prują b...\n",
+       "389  positive    7  Reżyser Stéphan Brizé nie kojarzył się jak dot...\n",
+       "390  negative    3  Producenci z Universalu mocno wierzą w życie p...\n",
+       "391  negative    4  Pamiętacie odcinek \"Przyjaciół\", w którym Chan...\n",
+       "392  positive    8  Hollywoodzcy twórcy rozmiłowali się ostatnio w...\n",
+       "393  positive    6  W swoim najnowszym filmie reżyser \"Czasu relig...\n",
+       "394  negative    3  Reżyser przysypia, komendę \"akcja!\" musi wydaw...\n",
+       "398  positive    8  Na Islandii dzieciństwo i dojrzewanie zawsze w...\n",
+       "399  positive    7  \"Droga do Rzymu\" trafia na polskie ekrany niem...\n",
+       "400  positive    6  Nie każdy szuka w kinie eksperymentów formalny...\n",
+       "401  positive    8  Eksmisja na bruk, rozpad małżeństwa, śmierć w ...\n",
+       "402  negative    3  Luksusowa nadmorska posiadłość, ona i on, nuda...\n",
+       "403  positive    5  Nie bez powodu Wonder Woman nazywana jest jedn...\n",
+       "404  positive    6  \"Sama przeciw wszystkim\" to film oparty na spr...\n",
+       "405  positive    7  Przygotujcie się na ekstremalne przeżycia. \"Na...\n",
+       "406  positive    5  Filmowej baśni dla dorosłych zatytułowanej \"Mó...\n",
+       "407  positive    7  Powraca w nowym filmie Romana Polańskiego obra...\n",
+       "408  positive    5  W historii filmowej rozrywki możemy natknąć si...\n",
+       "409  positive    8  Wnętrza wytworne, ale kiczowate. Dusze piękne,...\n",
+       "410  positive    7  Historia w \"Twarzy\" jest luźno oparta na prawd...\n",
+       "411  positive    7  W 1925 roku T.S. Eliot opublikował wiersz Próż...\n",
+       "412  positive    6  Rok 2045 nie przedstawia się zbyt optymistyczn...\n",
        "\n",
-       "[271 rows x 3 columns]"
+       "[319 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
