chages with Slowosiec - more analysis

--- a/Compare algorithms.ipynb
+++ b/Compare algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,23 +12,6 @@
     "import collections\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn import svm\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.metrics import f1_score\n",
-    "\n",
-    "module_path = os.path.abspath(os.path.join('/Users/balbi/Downloads/pyMorfologik-master'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
-    "from pymorfologik import Morfologik\n",
-    "from pymorfologik.parsing import ListParser\n",
-    "from __future__ import print_function\n",
-    "import string\n",
-    "from multiprocessing import cpu_count, Pool\n",
-    "import dask.dataframe as dd\n",
-    "from dask.multiprocessing import get\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline"
@@ -36,236 +19,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def createFileWithLemmatisation():\n",
-    "    commentsWithLemmatisation = pd.DataFrame()\n",
-    "    comments = pd.read_csv('FilmWeb-commentsRates.csv')\n",
-    "    for index, comment in comments.iterrows():\n",
-    "        text = lemmatisation(comment['Text'])\n",
-    "        commentsWithLemmatisation = commentsWithLemmatisation.append({'text': text, 'emotion': comment['emotion'], 'rate': comment['rate']}, ignore_index=True)\n",
-    "    commentsWithLemmatisation.to_csv('FilmWeb-detectingEmotions-lemmatisation.csv', encoding='utf-8', index=False)"
+    "def splitData(data, split):  \n",
+    "    train_data = pd.DataFrame()\n",
+    "    test_data = pd.DataFrame()\n",
+    "\n",
+    "    length_train_data = int(split * len(data))\n",
+    "    train_data = data[:length_train_data]\n",
+    "    test_data = data[length_train_data:]\n",
+    "    \n",
+    "    return [train_data, test_data]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def createDataFromFile():\n",
-    "    comments = pd.read_csv('FilmWeb-detectingEmotions-lemmatisation.csv')\n",
-    "    return comments"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def lemmatisation(text):\n",
-    "    parser = ListParser()\n",
-    "    stemmer = Morfologik()\n",
-    "    stemming = stemmer.stem([text], parser)\n",
-    "    words_list = list()\n",
-    "    for s in stemming:\n",
-    "        for i in s:\n",
-    "            for l in i:\n",
-    "                if(len(l) > 1):\n",
-    "                    words_list.append(l)\n",
-    "    return words_list"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#split (0.8 train_data 0.2 test_data)\n",
-    "def splitData(comments, split):\n",
-    "    comments.loc[comments.emotion == 'neutral', 'emotion'] = \"negative\"\n",
-    "    #charToRemove= dict.fromkeys('!@#$?.:,')\n",
-    "    #comments['Text'] = comments['Text'].translate(charToRemove)\n",
-    "    comments = comments.reset_index()\n",
-    "    \n",
-    "    train_data = pd.DataFrame()\n",
-    "    test_data = pd.DataFrame()\n",
-    "\n",
-    "    length_train_data = int(split * len(comments))\n",
-    "    train_data = comments[:length_train_data]\n",
-    "    test_data = comments[length_train_data:]\n",
-    "    \n",
-    "    return [train_data, test_data]\n",
-    "\n",
-    "def prepereDataForSVM(maximumNegativeRate, mimimumPositiveRate, train_data):\n",
-    "    data = np.empty((0))\n",
-    "    data_labels = np.empty((0))\n",
-    "    \n",
-    "    train_data = train_data[(train_data.rate <= maximumNegativeRate) | (train_data.rate >= mimimumPositiveRate)]\n",
-    "    train_data = train_data.reset_index()\n",
-    "  \n",
-    "    for index, train_data in train_data.iterrows():\n",
-    "        data = np.append(data, train_data['text'])\n",
-    "        data_labels = np.append(data_labels, train_data['emotion'])\n",
-    "    return [data, data_labels]\n",
-    "\n",
-    "def prepereDataForSlowosiec(maximumNegativeRate, mimimumPositiveRate, test_data):\n",
-    "    test_data = test_data[(test_data.rate <= maximumNegativeRate) | (test_data.rate >= mimimumPositiveRate)]\n",
-    "    test_data = test_data.reset_index()\n",
-    "    return test_data"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def slowosiec(text):\n",
-    "    emotions = pd.read_csv('emotionsTable.csv')\n",
-    "    text = text.replace(\"[\", \"\")\n",
-    "    text = text.replace(\" \", \"\")\n",
-    "    text = text.replace(\"]\", \"\")\n",
-    "    words_list = text.split(',')\n",
-    "    numberOfWords = len(words_list)\n",
-    "    result = 0\n",
-    "    if(numberOfWords > 0):\n",
-    "        emotionsCounter = 0\n",
-    "        for el in words_list: \n",
-    "            if((emotions['word'] == el)).any():\n",
-    "                emotionsCounter += float(emotions.loc[emotions['word'] == el]['sentiment'].mean())  \n",
-    "        result = emotionsCounter/numberOfWords\n",
-    "    return result"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def getEmotionStatusOfText(result):\n",
-    "    if(result <= 0):\n",
-    "        return 'negative'\n",
-    "    elif(result > 0):\n",
-    "        return 'positive'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def SVM_liblinear(iterations, dataset, is_shuffle):\n",
-    "    data = dataset[0]\n",
-    "    data_labels = dataset[1]\n",
-    "    \n",
-    "    sss = StratifiedKFold(n_splits=iterations, shuffle=is_shuffle)\n",
-    "\n",
-    "    for train_index, test_index in sss.split(data, data_labels):\n",
-    "        train_data = data[train_index]\n",
-    "        train_labels = data_labels[train_index]\n",
-    "        \n",
-    "        vectorizer = TfidfVectorizer(min_df=5,max_df = 0.8,sublinear_tf=True,use_idf=True)\n",
-    "        train_vectors = vectorizer.fit_transform(train_data)\n",
-    "        \n",
-    "        classifier_liblinear = svm.LinearSVC()\n",
-    "        classifier_liblinear.fit(train_vectors, train_labels)\n",
-    "        \n",
-    "    return [classifier_liblinear,vectorizer]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def SCV_detectingEmotions(classifier, vectorizer, test_data):\n",
-    "    test_vectors = vectorizer.transform(test_data)\n",
-    "    prediction_liblinear = classifier.predict(test_vectors)\n",
-    "    return prediction_liblinear"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_length(text):\n",
-    "    return len(text)\n",
-    "\n",
-    "def get_length_bin(length):\n",
-    "    return length / 10\n",
-    "\n",
-    "def get_score(result):\n",
-    "    return 1 if result else 0\n",
-    "\n",
-    "def renderPlot(result_df):\n",
-    "    result_df['correct_guess'] = result_df['detectedEmotion'] == result_df['emotion']\n",
-    "    result_df['score'] = map(get_score, result_df['correct_guess'])\n",
-    "    result_df['text_length'] = map(get_length, result_df['text'])\n",
-    "    result_df['text_length_bin'] = map(get_length_bin, result_df['text_length'])\n",
-    "    grouped = result_df.groupby('text_length_bin', as_index=False)['score'].mean()\n",
-    "\n",
-    "    fig, ax = plt.subplots()\n",
-    "    x = grouped.text_length_bin * 10\n",
-    "    y = grouped.score\n",
-    "    fit = np.polyfit(x, y, deg=1)\n",
-    "    ax.plot(x, fit[0] * x + fit[1], color='red')\n",
-    "    ax.scatter(x, y)\n",
-    "\n",
-    "    fig.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#testing algorithm Slowosiec\n",
-    "\n",
-    "import sys\n",
-    "reload(sys)\n",
-    "sys.setdefaultencoding('utf-8')\n",
-    "\n",
-    "\n",
-    "def calculateOneRow(level_0, index, emotion, rate, text):\n",
-    "    number = slowosiec(text)\n",
-    "    result_emotion = getEmotionStatusOfText(number)\n",
-    "    return {\"text\": text, \"detectedEmotion\": result_emotion, 'emotion': emotion, 'rate': rate}\n",
-    "\n",
-    "def parallelize(data, func):\n",
-    "    data_split = np.array_split(data, partitions)\n",
-    "    pool = Pool(cores)\n",
-    "    mapResult = pool.map(func, data_split)\n",
-    "    data = pd.concat(mapResult)\n",
-    "    pool.close()\n",
-    "    pool.join()\n",
-    "    return data\n",
-    "\n",
-    "cores = cpu_count()\n",
-    "partitions = cores\n",
-    "\n",
-    "comments = createDataFromFile()\n",
-    "[train_data, test_data] = splitData(comments,0.8)\n",
-    "test_data.reset_index()\n",
-    "data = prepereDataForSlowosiec(1,10,test_data)\n",
-    "\n",
-    "ddata = dd.from_pandas(data, npartitions=partitions)\n",
-    "\n",
-    "result = ddata.map_partitions(lambda df: df.apply((lambda row: calculateOneRow(*row)), axis=1)).compute(get=get)\n",
-    "result_df = pd.DataFrame()\n",
-    "for o in result:\n",
-    "    result_df = result_df.append(o, ignore_index=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -283,9 +113,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "renderPlot(result_df)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
