przygotowanie analizy obu algorytmow

--- a/mediaKrytyk - sentimentAnalisis.ipynb
+++ b/mediaKrytyk - sentimentAnalisis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,10 +116,10 @@
     "\n",
     "def calculateOneRow(index,comment, emotion, rate):\n",
     "    lemmatisation_text = re.sub(\"[!#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~']\", '', comment)\n",
-    "    text = lemmatisation(lemmatisation_text)\n",
-    "    [result, number] = detectingEmotionsInText(text)\n",
+    "    words_list = lemmatisation(lemmatisation_text)\n",
+    "    [result, number] = detectingEmotionsInText(words_list)\n",
     "    result_emotion = getEmotionStatusOfText(result)\n",
-    "    return {\"text\": comment, 'words': len(comment.split()), 'wordsFound': number, \"resultOfDetecting\": result, \"detectedEmotion\": result_emotion, 'emotion': emotion, 'rate': rate}\n",
+    "    return {\"text\": comment, 'words': len(comment.split()), \"lemmatisation\": words_list, 'wordsAfterLemmatisation': len(words_list), 'wordsFound': number, \"resultOfDetecting\": result, \"detectedEmotion\": result_emotion, 'emotion': emotion, 'rate': rate}\n",
     "\n",
     "def parallelize(data, func):\n",
     "    print (partitions)\n",
@@ -422,27 +422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-0.10130718954248366, 24]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "detectingEmotionsInText('Adam McKay zrealizował film swojego życia. Najambitniejszy, imponujący tempem, jednak bardzo przystępny i zrozumiały nawet dla takiego laika jak ja.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,27 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(text.split())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,195 +458,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-0.1040268456375839, 24]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "detectingEmotionsInText(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>detectedEmotion</th>\n",
-       "      <th>emotion</th>\n",
-       "      <th>rate</th>\n",
-       "      <th>resultOfDetecting</th>\n",
-       "      <th>text</th>\n",
-       "      <th>words</th>\n",
-       "      <th>wordsFound</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.260870</td>\n",
-       "      <td>Adam McKay zrealizował film swojego życia. Naj...</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>neutral</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Ten film tak mnie oczarował, że zapomniałem o ...</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>neutral</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Poza nietypowym wykładem, pozostaje także wyśm...</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>negative</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-0.015625</td>\n",
-       "      <td>Nie jest filmem łatwym, w żadnym wypadku. Jest...</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>negative</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-0.047619</td>\n",
-       "      <td>Czar Big Short nie minie do momentu, aż poznam...</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>negative</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-0.033333</td>\n",
-       "      <td>Wręcz genialny film, wykorzystujący inne ujęci...</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>negative</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-0.095238</td>\n",
-       "      <td>Niesie duże wartości edukacyjne i przedstawia ...</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>0.090909</td>\n",
-       "      <td>Z pewnością nie jest filmem, na który można si...</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>12.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>negative</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>-0.166667</td>\n",
-       "      <td>Świetny film o kruchym i skorumpowanym rynku.</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>positive</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>0.216667</td>\n",
-       "      <td>Filmowa perełka, która gdyby życie i świat był...</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  detectedEmotion   emotion  rate  resultOfDetecting  \\\n",
-       "0        positive  positive   9.0           0.260870   \n",
-       "1         neutral  positive   9.0           0.000000   \n",
-       "2         neutral  positive   9.0           0.000000   \n",
-       "3        negative  positive   9.0          -0.015625   \n",
-       "4        negative  positive   9.0          -0.047619   \n",
-       "5        negative  positive   9.0          -0.033333   \n",
-       "6        negative  positive   9.0          -0.095238   \n",
-       "7        positive  positive   8.5           0.090909   \n",
-       "8        negative  positive   8.5          -0.166667   \n",
-       "9        positive  positive   8.5           0.216667   \n",
-       "\n",
-       "                                                text  words  wordsFound  \n",
-       "0  Adam McKay zrealizował film swojego życia. Naj...   20.0         8.0  \n",
-       "1  Ten film tak mnie oczarował, że zapomniałem o ...   33.0         9.0  \n",
-       "2  Poza nietypowym wykładem, pozostaje także wyśm...    8.0         0.0  \n",
-       "3  Nie jest filmem łatwym, w żadnym wypadku. Jest...   31.0        10.0  \n",
-       "4  Czar Big Short nie minie do momentu, aż poznam...   15.0         2.0  \n",
-       "5  Wręcz genialny film, wykorzystujący inne ujęci...   15.0         5.0  \n",
-       "6  Niesie duże wartości edukacyjne i przedstawia ...   27.0         8.0  \n",
-       "7  Z pewnością nie jest filmem, na który można si...   28.0        12.0  \n",
-       "8      Świetny film o kruchym i skorumpowanym rynku.    7.0         2.0  \n",
-       "9  Filmowa perełka, która gdyby życie i świat był...   13.0         4.0  "
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result_df"
    ]
